# best-of-Agent-Harnesses

./: .gitignore  CITATION.cff  CLAUDE.md  CONTRIBUTING.md  PLAN.md  README.md  TAGS.md  claude.md  curation-queue.json  feed.json  harnesses.json  harnesses.jsonld  llms.txt  projects.yaml  server.json  smithery.yaml
.claude/: settings.json
.github/: PULL_REQUEST_TEMPLATE.md
attributes/: RUBRIC.md  adk-python.json  agent-framework.json  agent-squad.json  agent-zero.json  agentbox.json  agentrl.json  agents-cli.json  agents.json  agentsilex.json  agentsmd.json  agentstack.json  agentverse.json  agno.json  ailice.json  autogen.json  autogpt.json  autoharness.json  awesome-claude-code.json  awesome-cursorrules.json  beads.json  beeai-framework.json  botpress.json  browser-use.json  chatdev.json  claude-agent-sdk-python.json  claude-mem.json  claw-code-agent.json  cline.json  codex.json  cognee.json  context-mode.json  crewai.json  crush.json  dify.json  eliza.json  flowise.json  gemini-cli.json  get-shit-done.json  goose.json  (+49 more)
comparisons/: how-to-pick-a-harness.md  memory-layers.md  multi-agent-orchestration.md  openclaw-vs-hermes.md  terminal-coding-agents.md
config/: footer.md  header.md
mcp/: README.md  pyproject.toml  server.py
scripts/: add_endorsement_column.py  build_site.py  check_integrity.py  discover_candidates.py  endorsements_data.py  generate.py  refresh_stars.py  relabel_axis.py  write_queue.py
tests/: conftest.py  test_archived.py  test_archived_rewrite.py  test_attributes.py  test_build_site.py  test_discover.py  test_graveyard.py  test_queue.py  (+4 more)
(+19 files in other folders)
