[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agent-harnesses-mcp"
version = "0.4.0"
description = "MCP server for best-of-Agent-Harnesses: opinionated harness recommendations (recommend/pick_harness), search, and head-to-head decision guides over a hand-curated, weekly-rescored list of agent harnesses"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "Ryan Alberts" }]
keywords = ["mcp", "model-context-protocol", "agents", "agent-harness", "llm"]
dependencies = ["mcp>=1.2"]

[project.scripts]
agent-harnesses-mcp = "agent_harnesses_mcp:main"

[project.urls]
Repository = "https://github.com/RyanAlberts/best-of-Agent-Harnesses"
Documentation = "https://github.com/RyanAlberts/best-of-Agent-Harnesses/tree/main/mcp"

[tool.hatch.build.targets.wheel.force-include]
"server.py" = "agent_harnesses_mcp/__init__.py"
